--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   odoo-web:
     image: odoo:16.0
     depends_on:
-      - odoo-db
+      odoo-db:
+        condition: service_started
     ports:
       - "8069:8069"
     volumes:
@@ -15,6 +16,7 @@ services:
       - PASSWORD_FILE=/run/secrets/postgresql_password
     secrets:
       - postgresql_password
+    container_name: odoo-web
 
   odoo-db:
     image: postgres:15
@@ -23,10 +25,13 @@ services:
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgresql_password
       - POSTGRES_USER=odoo
       - PGDATA=/var/lib/postgresql/data/pgdata
+    ports:
+      - "5432:5432"
     volumes:
       - odoo-db-data:/var/lib/postgresql/data/pgdata
     secrets:
       - postgresql_password
+    container_name: odoo-db
 
 volumes:
   odoo-web-data:
